the video's CSS update

--- a/index.html
+++ b/index.html
@@ -117,10 +117,7 @@
                 Além dessas, surgem funções como <strong>treinadores de algoritmos</strong>, <strong>curadores de dados</strong>, <strong>engenheiros de prompt</strong> (especialistas em formular instruções para sistemas de IA generativa), <strong>designers de experiências com IA</strong> e <strong>especialistas em explicabilidade e justiça algorítmica</strong>. Também cresce a demanda por profissionais com conhecimento híbrido, que aliam competências técnicas a habilidades humanas, como pensamento <strong>crítico</strong>, <strong>criatividade</strong> e <strong>empatia</strong> — fundamentais para supervisionar decisões automatizadas e garantir que a tecnologia seja usada de forma <strong>ética</strong> e <strong>responsável</strong>.
             </p>
             <div class="video">
-                <video width="560" height="315" controls>
-                <source src="entrevista/entrevista02.mp4" type="video/mp4">
-                Seu navegador não suporta a tag de vídeo.
-                </video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/tZfTpYTaN7M?si=20gLWuWSKbOhs8Dm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <p>
                 O futuro do trabalho será cada vez mais orientado à complementaridade entre <strong>capacidades humanas</strong> e <strong>artificiais</strong>, em vez da substituição completa. Assim, adaptar-se às novas exigências, investir em educação contínua e desenvolver competências digitais se tornará essencial para prosperar nesse novo cenário profissional impulsionado pela inteligência artificial.
